[package]
name = "reolink-mailpit-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-alpha.1"
http = "1.2.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
bytes = "1.9.0"
rumqttc = "0.24.0"
dotenvy = "0.15.7"